--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>My First Website</title>
 </head>
 <body>
+    <!-----------------------------
     <h1>Welcome to My First 222222222 Website</h1>
     <p>Hello, world! This is my first webpage hosted on GitHub Pages.</p>
+    ------------------->
+<script>
+
+  location.replace("sliders/index.php")
+
+</script>
+    
 </body>
 </html>
