--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     ------------------->
 <script>
 
-  location.replace("sliders/index.php")
+  location.replace("sliders/index.html")
 
 </script>
     
