--- a/sliders/index.html
+++ b/sliders/index.html
@@ -114,25 +114,25 @@ function theFunction() {
 SSSSSSSSSS
 </div>
 
-<iframe src="OnTheRight.html" width=100% height=100%>
+<iframe src="OnTheRight.html" width=100% height=100%></iframe>
 
 </div>	
 
 
 <div class="KaxxaMiddle">
 
-<iframe src="upwards.html" width=100% height=100%>
+<iframe src="upwards.html" width=100% height=100%></iframe>
 </div>
 
 <div class="KaxxaMiddle">
 
-<iframe src="downwardsx.html" width=100% height=100%>
+<iframe src="downwardsx.html" width=100% height=100%></iframe>
 </div>
 
 
 <div class="KaxxaRight"  >  
 
-<iframe src="OnTheRight.html" width=100% height=100%>
+<iframe src="OnTheRight.html" width=100% height=100%></iframe>
 </div>
 
 </div>	
