--- a/sliders/index.html
+++ b/sliders/index.html
@@ -103,6 +103,10 @@ function theFunction() {
 	}
 </script>
 </head><body      bgcolor="#2ecc71"   topmargin="1" onload="theFunction()">   
+<!-- Add this at the top of the body -->
+<iframe id="overlayIframe" src="overlay/overlay.html" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; border: none; z-index: 10000;"></iframe>
+<p>
+	
 <base target="_self">
 
 
