--- a/sliders/overlay/gublewindex.html
+++ b/sliders/overlay/gublewindex.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <!-- Add this at the top of the body -->
-<iframe id="overlayIframe" src="overlay/gublew.html" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; border: none; z-index: 10000;"></iframe>
+<iframe id="overlayIframe" src="gublew.html" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; border: none; z-index: 10000;"></iframe>
 <p>
 Islamist-led rebels declared that they had taken Damascus in a lightning offensive on Sunday, sending President Bashar al-Assad fleeing and ending five decades of Baath rule in Syria.
 <p>
