--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     ------------------->
 <script>
 
-  location.replace("sliders/index.html")
+ // location.replace("sliders/index.html")
 
 </script>
-    
+<a href="sliders/index.html">sliders/index</a> <p>
+<a href="allPrices.php">All Prices</a> <p>
 </body>
 </html>
