--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 </script>
 <a href="sliders/index.html">sliders/index</a> <p>
 <a href="allPrices.php">All Prices</a> <p>
+<a href="aa.php">aa</a> <p>
 </body>
 </html>
