--- a/games/index/index3.html
+++ b/games/index/index3.html
@@ -34,7 +34,7 @@ table, th, td {
  <tr> </tr>
 <td> <a href="../Luke3/3B.html">PICTURES (2)</a></td>
 
-<td> <a href="../Luke3/3D_1.html">PICTURE GAME (1)</a></td>
+<td> <a href="../Luke3/3E.html">PICTURE GAME (1)</a></td>
 
 <td> <a href="../Luke3/3D.html">PICTURE GAME (2)</a></td>
 
@@ -49,4 +49,5 @@ table, th, td {
 
 </body>
 </html>
+
 
