--- a/games/index/index3.html
+++ b/games/index/index3.html
@@ -27,16 +27,13 @@ table, th, td {
 
    
 <td> <a href="../Luke3/3A.html">PICTURES (1)</a></td>
-<td> <a href="../Luke3/3C_1.html">PICTURE GAME (1)</a></td>
-
-<td> <a href="../Luke3/3C.html">PICTURE GAME (2)</a></td>
+<td> <a href="../Luke3/3C.html">PICTURE GAME (1)</a></td>
+<td> <a href="../Luke3/3E.html">PICTURE GAME (2)</a></td>
 
  <tr> </tr>
 <td> <a href="../Luke3/3B.html">PICTURES (2)</a></td>
-
-<td> <a href="../Luke3/3E.html">PICTURE GAME (1)</a></td>
-
-<td> <a href="../Luke3/3D.html">PICTURE GAME (2)</a></td>
+<td> <a href="../Luke3/3D.html">PICTURE GAME (1)</a></td>
+<td> <a href="../Luke3/3F.html">PICTURE GAME (2)</a></td>
 
 
 
@@ -49,5 +46,6 @@ table, th, td {
 
 </body>
 </html>
+
 
 
