--- a/games/Luke3/3B.html
+++ b/games/Luke3/3B.html
@@ -50,7 +50,7 @@
 
 <audio id="audio"></audio>
 <video id="backgroundVideo" autoplay loop muted>
-    <source src="../garden.mp4" type="video/mp4">
+   <source src="../rain.mp4" type="video/mp4">
 </video>
 <button id="startButton">Start Game</button>
 
@@ -95,3 +95,4 @@ function showImage() {
 
 </body>
 </html>
+
