--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@
 <a href="allPrices.php">All Prices</a> <p>
 <a href="aa.php">aa</a> <p>
     
-</body><a href="https://guzeppicode.github.io/myfirst/games/Luke3/3C.html"> Luke</a> <p>
+</body><a href="https://guzeppicode.github.io/myfirst/games"> Luke</a> <p>
 </html>
