--- a/games/index.html
+++ b/games/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
-<html>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- PWA Manifest -->
+<html lang="en">
+<head>
+<!------------------------------------------------->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <meta charset="UTF-8">
+<!------------------------------->
+   <link rel="icon" href="icon/favicon.ico" type="image/x-icon">
+   <meta name="theme-color" content="#317EFB"/>
+   <link rel="apple-touch-icon" href="icon/apple-touch-icon.png">
+    <link rel="stylesheet" type="text/css" href="css/style.css"></link>
+    <script src="index.js" defer></script>
     <link rel="manifest" href="manifest.json">
+<meta name="description" content="A SET OF GAMES FOR LUKE">
 
 
+
+<!---------------------------------------->
+<title>Test</title>
+<!---------------------------------------->
 <style>
 table, th, td {
   border: 1px solid black;
@@ -14,6 +26,7 @@ table, th, td {
  font-size: 28px;
 }
 </style>
+</head>
 <body>
 
 <h2>Lessons for LUKE</h2>
@@ -22,8 +35,7 @@ table, th, td {
   <tr>
     <th>Category</th>
     <th colspan=4>Lessons</th>
-    
-  
+   
   </tr>
   <tr>
 <td> <a href="index/index1.html">Pictures</a></td>
@@ -43,22 +55,11 @@ table, th, td {
 
 </tr><tr>
 
-
-
-
-
-
-
-
-
   </tr>
  <!----------------------------------------------------------------------->
  <!----------------------------------------------------------------------->
   <tr>
   <td> <a href="index/index4.html">Shapes</a></td>
-
-
-
 
   </tr>
  <!----------------------------------------------------------------------->
@@ -91,6 +92,13 @@ table, th, td {
 
 
 
+
+
+
+</p>
+<p>    <button class="add-button">Add To Home Screen</button>
+
+
+
 </body>
 </html>
-
